crates/biome_html_parser/tests/html_specs/ok/svelte/directives/class_shorthand.svelte
<div class:active>Shorthand</div>
<div class:cool class:lame={!cool}>Multiple shorthand</div>
