crates/biome_html_parser/tests/html_specs/error/svelte/directives/class_invalid_expression.svelte
<div class:active={>Invalid</div>
